; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/extr_timer.c_timer_deinit.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/extr_timer.c_timer_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PYB_TIMER_OBJ_ALL_NUM = common dso_local global i64 0, align 8
@pyb_timer_obj_all = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timer_deinit() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  store i64 0, i64* %1, align 8
  br label %3

3:                                                ; preds = %20, %0
  %4 = load i64, i64* %1, align 8
  %5 = load i64, i64* @PYB_TIMER_OBJ_ALL_NUM, align 8
  %6 = icmp ult i64 %4, %5
  br i1 %6, label %7, label %23

7:                                                ; preds = %3
  %8 = load i32, i32* @pyb_timer_obj_all, align 4
  %9 = call i32** @MP_STATE_PORT(i32 %8)
  %10 = load i64, i64* %1, align 8
  %11 = getelementptr inbounds i32*, i32** %9, i64 %10
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %2, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %7
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @MP_OBJ_FROM_PTR(i32* %16)
  %18 = call i32 @pyb_timer_deinit(i32 %17)
  br label %19

19:                                               ; preds = %15, %7
  br label %20

20:                                               ; preds = %19
  %21 = load i64, i64* %1, align 8
  %22 = add i64 %21, 1
  store i64 %22, i64* %1, align 8
  br label %3

23:                                               ; preds = %3
  ret void
}

declare dso_local i32** @MP_STATE_PORT(i32) #1

declare dso_local i32 @pyb_timer_deinit(i32) #1

declare dso_local i32 @MP_OBJ_FROM_PTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
